2011-10-30  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/loader/mips/linux.c (loongson_machtypes): Fix fuloong type
	string.

2011-10-30  Vladimir Serbinenko  <phcoder@gmail.com>

	Leverage BFS implementation to read AFS.

	* Makefile.util.def (libgrubmods): Add afs.c.
	* grub-core/Makefile.core.def (afs): New module
	* grub-core/fs/afs.c: New file.
	* grub-core/fs/bfs.c [MODE_AFS]: Adapt for AFS.

2011-10-30  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/bfs.c: Macroify and add some necessary sanity checks.

2011-10-30  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/bfs.c: Run indent.

2011-10-30  Vladimir Serbinenko  <phcoder@gmail.com>

	BFS implementation based on the specification.

	* grub-core/fs/bfs.c: New file.
	* Makefile.util.def (libgrubmods): Add bfs.c.
	* grub-core/Makefile.core.def (bfs): New module.

2011-10-30  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-fstest.c (cmd_cp): Clarify error message.
	(cmd_cmp): Likewise.

2011-10-30  Yves Blusseau  <blusseau@zetam.org>

	* po/POTFILES.in: Regenerate because of the removal of afs, afs_be, befs
	and befs_be.

2011-10-29  Vladimir Serbinenko  <phcoder@gmail.com>

	Remove afs and befs because of copyright problem.

	* grub-core/fs/afs.c: Removed.
	* grub-core/fs/afs_be.c: Removed.
	* grub-core/fs/befs.c: Removed.
	* grub-core/fs/befs_be.c: Removed.
	* Makefile.util.def (libgrubkern): Remove afs, afs_be, befs and befs_be.
	* grub-core/Makefile.core.def (afs): Removed.
	(afs_be): Likewise.
	(befs): Likewise.
	(befs_be): Likewise.

2011-10-28  Vladimir Serbinenko  <phcoder@gmail.com>

	Prefer rockridge over Joliet.

	* grub-core/fs/iso9660.c (grub_iso9660_mount): Move rockridge detection
	to ...
	(set_rockridge): ... here.
	(grub_iso9660_mount): Check rockridge on the primary label when
	discovering. Ignore Joliet if Rockridge is present.

2011-10-28  Vladimir Serbinenko  <phcoder@gmail.com>

	Use shifts in nilfs2.
